--- a/SeoSearcher/SeoSearcher.csproj
+++ b/SeoSearcher/SeoSearcher.csproj
@@ -164,17 +164,14 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\Home\SeoSearch.cshtml" />
     <Content Include="Views\SeoSearch\Create.cshtml" />
     <Content Include="Views\SeoSearch\Delete.cshtml" />
     <Content Include="Views\SeoSearch\Details.cshtml" />
     <Content Include="Views\SeoSearch\Edit.cshtml" />
+    <Content Include="Views\SeoSearch\IndexOld.cshtml" />
     <Content Include="Views\SeoSearch\Index.cshtml" />
-    <Content Include="Views\SeoSearch\SeoSearch.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
