--- a/SeoSearcher/Web.config
+++ b/SeoSearcher/Web.config
@@ -9,9 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-
-    <add key="GoogleSearchResultIdentifier" value="&lt;h3 class=&quot;r&quot;>"/>
-    <add key="GoogleResultUrlRegex" value="&lt;a href=\&quot;/url[?]q=(.*?).amp;sa=U"/>
+    <add key="GoogleMaxSearchResults" value="100" />
+    <add key="GoogleSearchResultIdentifier" value="&lt;h3 class=&quot;r&quot;&gt;" />
+    <add key="GoogleResultUrlRegex" value="&lt;a href=\&quot;/url[?]q=(.*?).amp;sa=U" />
 
 
     <add key="webpages:Version" value="3.0.0.0" />
