Cut down - dbContext errors - cant connect to localDB?

--- a/SeoSearcher/SeoSearcher.csproj
+++ b/SeoSearcher/SeoSearcher.csproj
@@ -123,6 +123,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SeoSearchController.cs" />
+    <Compile Include="DAL\SeoSearchDataManager.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
