FIxed?  Added connection strings to web config

--- a/SeoSearcher/Web.config
+++ b/SeoSearcher/Web.config
@@ -8,6 +8,14 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+
+  <connectionStrings>
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SeoSearch-20160408054500.mdf;Initial Catalog=aspnet-SeoSearch-20160408054500;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+
+    <add name="SeoSearchDbContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SeoSearcher.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+
+  </connectionStrings>
+  
   <appSettings>
     <add key="GoogleMaxSearchResults" value="100" />
     <add key="GoogleSearchResultIdentifier" value="&lt;h3 class=&quot;r&quot;&gt;" />
