--- a/SeoSearcher.Tests/App.config
+++ b/SeoSearcher.Tests/App.config
@@ -5,7 +5,9 @@
 -->
 <configuration>
     <appSettings>
-
+      <add key="GoogleMaxSearchResults" value="100" />
+      <add key="GoogleSearchResultIdentifier" value="&lt;h3 class=&quot;r&quot;&gt;" />
+      <add key="GoogleResultUrlRegex" value="&lt;a href=\&quot;/url[?]q=(.*?).amp;sa=U" />
     </appSettings>
 
     <connectionStrings>
